[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "craipy-tools"
version = "0.0.1"
authors = [
  { name="Christian Rink", email="crdeg7plaoh@yahoo.de" },
]
description = "Simple toolbox with quality-of-life tools."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ai-cr/craipy-tools"
